--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -132,7 +132,7 @@
                 <span class="font-weight-bold f_size">주소<br></span> <input
                     type="text" style="width: 500px; height: 50px;"
                     name="address" class="f_size" id="address"
-                    placeholder="  비밀번호 확인">
+                    placeholder="  주소">
             </section>
             <input type="button" class="btn btn-secondary mt-5 f_size" onclick="BTN_REG()"
                    style="width: 500px; height: 50px;" id="join" value="가입하기">
